--- a/ContactList/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactList/Storyboards/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
         <!--Contact List-->
         <scene sceneID="Qmx-Dx-jYI">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Qcg-m8-eRG" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Qcg-m8-eRG" customClass="TabBarViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Contact List" id="vom-97-X5o"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2he-W5-NZI">
